# score_denoiser

./: .gitignore  HANDOFF.md  LICENSE  README.md  RELEASE_NOTES_v1.0.0.md  RELEASE_NOTES_v1.0.1.md  index.html  package-lock.json  package.json  score_denoiser.py  vite.config.ts
.github/workflows/: release.yml
docs/: manual-ja.md
legacy-python/: README.md  score_denoiser.py
sidecar/: build.ps1  build.sh  main.py  requirements.txt
sidecar/routers/: batch.py  config.py  folder.py  preview.py
sidecar/services/: processor.py
src/: App.tsx  api.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AboutDialog.tsx  PreviewCanvas.tsx
