[package]
name = "score_denoiser"
version = "0.1.0"
description = "楽譜ノイズ除去ツール"
authors = ["osprey74"]
edition = "2021"

[lib]
name = "score_denoiser_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
